# scopus

./: README.md  README.rst  setup.cfg
docs/: conf.py  index.rst
scopus/: __init__.py
