[metadata]
name = scopus
author = 'John Kitchin and Michael E. Rose
author-email = Michael.Ernst.Rose@gmail.com
summary = Outdated package
description-file = README.rst
home-page = https://scopus.readthedocs.io/en/stable/
classifier =
    Development Status :: 7 - Inactive
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    scopus

[bdist_wheel]
universal=1
